--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Ubuntu Server
+name: Test workflow
 
 on:
   push:
@@ -6,18 +6,9 @@ on:
       - main
 
 jobs:
-  deploy:
+  first-job:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    - name: Copy files to server
-      run: |
-        ssh -o StrictHostKeyChecking=no dragonball11182k1@34.126.133.43 "cd /home/dragonball11182k1/project/test-github-action && git pull origin main && npm install && pm2 restart MyServer"
+    - run: echo "Checking out code"
